--- a/css/index.css
+++ b/css/index.css
@@ -5,46 +5,47 @@ body{
   margin: 0;
   padding: 0;
 }
+
 /* Nome do Blog */
 #logo{
+   margin-top: 2%;
    height: 25%;
    width: 25%;
 }
 
-/* Formatação do Menu*/
+/* Formatação */
 #menu ul {
-	padding:0px;
+  padding:0px;
 	margin-top: 1%;
-    margin-left: 4.3%;
-    margin-right: 4.3%;
-    margin-bottom: 2%;
+  margin-left: 4.3%;
+  margin-right: 4.3%;
+  margin-bottom: 2%;
 	background-color:#FF9133;
 	list-style:none;
-    font-size:20px;
-    font-family: arial;
+  font-size:20px;
+  font-family: arial;
 }
 
 /* Deixando as opções lado a lado */
-#menu ul li { 
-    display: inline; 
-    
+#menu ul li {
+  display: inline;
+
 }
 
 /* Formatando links do menu */
 #menu ul li a {
-    padding: 15px 10px;
-    display: inline-block;
-    background-color:#FF9133;
-    color: white;
-    text-decoration: none;
+  padding: 15px 10px;
+  display: inline-block;
+  background-color:#FF9133;
+  color: white;
+  text-decoration: none;
 }
 
 /* Mudança das opções quando passar o mouse em cima */
 #menu ul li a:hover {
 	background-color:#FF4500;
-    color: white;
+  color: white;
 }
-
 
 /* Conteúdo da página */
 #conteudo{
@@ -53,32 +54,109 @@ body{
   height: 1000px;
   margin-left: 4.3%;
 }
+
 /* Iframe do Conteúdo */
 #iframe{
   width: 80%;
   height: 900px;
   margin-top: 8%;
   border-style: solid;
+  border-color: #FF9133;
+}
+
+/* Div Flutuante a Direita */
+#ferramentas{
+  background-color: white;
+  border-radius: 5%;
+  position: fixed;
+  left: 77%;
+  height: 250px;
+  width: 18%;
+  border: 5px solid grey;
+  border-color: #FF9133;
+}
+
+/* Barra da Div Flutuante */
+#barra{
+  font-size: 120%;
+  font-family: arial;
+  width: 100%;
+  height: 40px;
+  background-color: #FF9133;
+
+}
+
+/* Título da Barra */
+#titulo{
+  padding: 3%;
+  margin: 0;
+  text-align: center;
+  color: white;
+}
+
+/* Butões da Div Ferramentas */
+
+#ferr01, #ferr02, #ferr03, #ferr04{
+  border-radius: 3%;
+  border: 0;
+  background-color: #FF9133;
+  width: 80%;
+  height: 40px;
+  margin-top: 4%;
+}
+
+#ferr01:hover{
+  background-color:#FF4500;
+}
+
+#ferr02:hover{
+  background-color:#FF4500;
+}
+
+#ferr03:hover{
+  background-color:#FF4500;
+}
+
+#ferr04:hover{
+  	background-color:#FF4500;
 }
 
 /* Botões Anerior e Próximo */
 #ant, #prox{
   border: 0;
   background-color: #FF9133;
-  color: red;
+  color: white;
   border-radius: 10%;
   font-size: 120%;
   width: 5%;
   outline: none;
 }
 
+/* Div Butão Topo */
+#topo{
+  background-color: #FF4500;
+  font-size: 120%;
+  border: 0;
+  border-radius: 10%;
+  float: right;
+  height: 28px;
+  width: 5%;
+}
+
+/* Subir ao Topo */
+#subir{
+font-family: arial;
+text-decoration: none;
+color: white;
+}
+
+/* Final da Página */
 #finalPagina{
-    background-color:#FF9133;
-    text-align: center;
-    color:white;
-    margin-top: 1%;
-    margin-left: 4.3%;
-    margin-right: 4.3%;
-    padding: 1%;
-    
+  margin-left: 4.3%;
+  margin-right: 4.3%;
+  background-color:#FF9133;
+  text-align: center;
+  color:white;
+  margin-top: 1%;
+  padding: 1%;
 }
