--- a/css/index.css
+++ b/css/index.css
@@ -105,6 +105,7 @@ body{
   width: 80%;
   height: 40px;
   margin-top: 4%;
+  color: white;
 }
 
 #post01:hover{
@@ -196,3 +197,4 @@ float: left;
   padding: 1%;
   height: 60px;
 }
+
