--- a/css/index.css
+++ b/css/index.css
@@ -138,13 +138,18 @@ body{
 ul.paginacao li {display: inline;}
 
 ul.paginacao li a {
-    color: black;
+    color: white;
     padding: 8px 16px;
     text-decoration: none;
-    transition: background-color .3s;
+    background-color:#ddd;
 }
 
-ul.paginacao li a:hover:not(.active) {background-color: #ddd;}
+ul.paginacao li a#bt01 {
+    background-color: black;
+    color: white;
+}
+
+
 
 /* Div Butão Topo */
 #topo{
